A set of changes from Sandia for improving clustering, fixing some copyright assertions, and some useful data types